# vllm_config_estimator

./: .gitignore  Containerfile  README.md  app.py  pyproject.toml  test_knobs.json  vllm_estimate_json_viewer.html  vllm_start_config_from_estimate.py
src/llm_optimizer/: args.py  bench_client.py  cli.py  cli_utils.py  common.py  exceptions.py  logging.py  performance.py  server_utils.py  utils.py
src/llm_optimizer/predefined/: __init__.py  client.py  gpus.py  max.py  sglang.py  vllm.py
src/llm_optimizer/resources/: __init__.py  gpu_manager.py  memory_calculator.py  types.py
src/llm_optimizer/tuning/: __init__.py  base.py  commands.py  core.py  generation.py  strategy.py
src/llm_optimizer/visualization/: template.html  visualization_config.json  visualize.py
templates/: index.html
tests/: test_app.py  test_calc.py  test_knobs.json  test_param_count.py  test_resources.py
