[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-optimizer"
version = "0.0.1"
description = "A tool to optimize LLM performance."
requires-python = ">=3.9"
dependencies = [
    "aiohttp",
    "requests",
    "openai",
    "psutil",
    "click",
    "nvidia-ml-py3",
    "numpy",
    "scipy",
    "huggingface_hub",
    "pydantic",
]

[project.scripts]
llm-optimizer = "llm_optimizer.cli:cli"


[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
